# FastAPI-CRUD

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
api/: database.py  endpoints.py  main.py  models.py  schemas.py  utils.py
app/: database.py  main.py  main_test.py  models.py  schemas.py  utils.py
app/tests/: main_test.py
tests/: conftest.py  test_main.py
